# pydatk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/source/: conf.py  index.rst  modules.rst  pydatk.rst
src/pydatk/: __init__.py  __pydatk_dev.py  config.py  dev.py  new_module.py  yaml.py
tests/: run_all.sh  test_config.py  test_new_module.py  test_pydatk.py  test_pydatk_dev.py  test_yaml.py
